--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "client-dev": "npx webpack --watch --config webpack.config.js",
+    "start": "npx live-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,15 +19,20 @@
   },
   "homepage": "https://github.com/NaNdyKing/FEC#readme",
   "dependencies": {
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "express": "^4.18.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/eslint-parser": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "babel-jest": "^28.1.2",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.1",
     "eslint": "^8.12.0",
@@ -36,6 +42,9 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-webpack-plugin": "^3.1.1",
+    "jest": "^28.1.2",
+    "nodemon": "^2.0.19",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
