--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
