--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.3.0",
     "babel-jest": "^28.1.2",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.1",
+    "enzyme": "^3.11.0",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
