--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "client-dev": "npx webpack --watch --config webpack.config.js",
     "server-dev": "npx nodemon --watch server server/index.js",
     "start": "npx live-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
