--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-share": "^4.4.0",
     "react-star-ratings": "^2.3.0",
     "styled-components": "^5.3.5"
   },
