--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "express": "^4.18.1",
+    "jest-styled-components": "^7.0.8",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
