--- a/package.json
+++ b/package.json
@@ -23,12 +23,9 @@
     "@cloudinary/react": "^1.4.1",
     "@cloudinary/url-gen": "^1.8.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
     "express": "^4.18.1",
-    "jest-styled-components": "^7.0.8",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-share": "^4.4.0",
@@ -41,6 +38,7 @@
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.3.0",
     "babel-jest": "^28.1.2",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.1",
@@ -54,6 +52,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.2",
+    "jest-styled-components": "^7.0.8",
     "nodemon": "^2.0.19",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.49.9",
