--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@cloudinary/react": "^1.4.1",
     "@cloudinary/url-gen": "^1.8.0",
     "axios": "^0.27.2",
+    "compression": "^1.7.4",
     "express": "^4.18.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
