prod build webpack config, and script

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "client-dev": "npx webpack --watch --config webpack.config.js",
     "server-dev": "npx nodemon --watch server server/index.js",
+    "build": "npx webpack --config webpack.prod.js",
     "start": "npx live-server",
     "test": "jest"
   },
